src/objects/DNBI__Decision_Rules__c.object
<CustomObject>
    <fields>
        <fullName>DNBI__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Decision Rules</relationshipLabel>
        <relationshipName>Account_Decision_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DNBI__ApplicationValue__c</fullName>
        <label>ApplicationValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contract Decision Rules</relationshipLabel>
        <relationshipName>Contract_Decision_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DNBI__Credit_Decision_History__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Decision History</label>
        <referenceTo>DNBI__Credit_Decision_History__c</referenceTo>
        <relationshipLabel>History Decision Rules</relationshipLabel>
        <relationshipName>CDH_Decision_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DNBI__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Lead Decision Rules</relationshipLabel>
        <relationshipName>Lead_Decision_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DNBI__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Decision Rules</relationshipLabel>
        <relationshipName>Opportunity_Decision_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DNBI__Rule_Type__c</fullName>
        <label>Rule Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AND</fullName>
                </value>
                <value>
                    <fullName>OR</fullName>
                </value>
                <value>
                    <fullName>OVERRIDE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DNBI__Rule__c</fullName>
        <label>Rule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Decision Rules</label>
    <nameField>
        <label>Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Decision Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>